@@ -1,3 +1,9 @@
+2002-02-18  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/StructBase.cs (GenCtor): StudCapsify static method names.
+	* generator/SymbolTable.cs (Trim): strip const- prefix.
+	* sample/ButtonApp.cs (Window_delete): handle RetVal.
+
 2002-02-17  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/StructBase.cs (MangleName): add object and event.
